--- a/lesson2/Dockerfile
+++ b/lesson2/Dockerfile
@@ -6,6 +6,7 @@ ENV FLASK_APP=app
 COPY /app/requirements.txt ./
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
+COPY /app ./
 
 
 # ポートの公開
