--- a/lesson4/docker-compose.yaml
+++ b/lesson4/docker-compose.yaml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   frontend:
-    image: streamlit
+    build: ./frontend
     container_name: frontend
     volumes:
       - ./frontend:/app
