--- a/lesson4/frontend/Dockerfile
+++ b/lesson4/frontend/Dockerfile
@@ -5,6 +5,9 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # 必要なパッケージのインストール
+RUN apt-get update && apt-get install -y \
+    cmake \
+    && rm -rf /var/lib/apt/lists/*
 COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
