--- a/lesson4/frontend/Dockerfile
+++ b/lesson4/frontend/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
     cmake \
     && rm -rf /var/lib/apt/lists/*
 COPY requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # アプリケーションファイルのコピー
 COPY . /app
